# Spline

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/: BaseCurve.h  Block.h  CurveCuda.h  DualBlock.h  Ellipse.h  Intersector.h  Spline.h  SplineD.h
src/: BaseCurve.cu  Block.cu  ComplexFunctions.cu  ComplexFunctions.h  Distance.h  DualBlock.cu  Ellipse.cu  Intersector.cpp  IntersectorKernels.cu  IntersectorKernels.h  Optimizers.cu  Optimizers.h  SearchInitializer.cpp  SearchInitializer.h  Spline.cpp  Spline.cu  SplineSolver.cpp  SplineSolver.h  Spline_impl.h  helpers.h
tests/: SplineTests.h  main.cpp
